--- a/styles/globals.css
+++ b/styles/globals.css
@@ -575,12 +575,57 @@ p {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  height: 50vh;
+  height: 60vh;
   gap: 20px;
   max-width: 800px; /* Adjust width to control the line breaking */
   margin: 0 auto; /* Center the grid container */
 }
 
+.modal-group span{
+  padding: 1px 8px 1px 8px;
+  background: #fff; 
+  border-radius: 50px;
+  margin-bottom: 8px;  
+  white-space: nowrap;
+  cursor: pointer;
+  transition: transform 0.2s ease-in-out;
+  position: relative;
+}
+.modal-group span:hover{
+background-color: red;
+color: white;
+}
+.modal-group span:hover::after{
+  opacity: 1;
+}
+.modal-group span:after{
+  content: 'x';
+  opacity: 0;
+  position: absolute;
+  top: -2px;
+  font-size: 12px;
+  right: -5px;
+  background: #fff;
+  padding: 0px 3px 0px 4px;
+  border-radius: 100%;
+  color: red;
+  font-weight: bold;
+
+}
+.modal-group{
+  background: #ccc;
+    padding: 5px;
+    display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+}
+.week-navigation{
+  display: flex;
+  justify-content: space-between;
+}
+.week-navigation span{
+cursor: pointer;
+}
 .grid-item {
   background-color: #f0f0f0;
   padding: 20px;
