--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1059,7 +1059,7 @@ display: block;
 }
 
 .message {
-  max-width: 80%;
+  max-width: 100%;
   padding: 10px;
   border-radius: 10px;
   position: relative;
@@ -1163,4 +1163,10 @@ display: block;
   0% { background-color: #ff0; }
   50% { background-color: #fff; }
   100% { background-color: #ff0; }
+}
+.time-message{
+  color: #959595f5;
+}
+.sent .time-message {
+  color: #e4e4e4f5;
 }
